# Vita

./: README.md  pyproject.toml  start.bat
vita/: app.py  👋 Welcome.py
vita/modules/: utils.py
vita/pages/: ✏️ Spelling Correction.py  🎬 Video Editor.py  📥 YouTube Downloader.py  🖌️ Image Editor.py
